--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.32 </strong><br />
+  <p><strong> Version 5.33 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -71,28 +71,29 @@
     <p><strong><em>Item & Weapon Overhaul (IWO): Yet Another Revised Armor System</em></strong></p>
     <p>This component changes armor to give the wearer a mix of Armor Class and Damage Resistance bonuses. The values are listed below:</p>
       <pre>
-    Armor:
-	 leather:	AC 8 	-1 Dex 	8% DR 	+2 casting time
-	 studded:	AC 7 	-2 Dex 	12% DR 	+2 casting time
-	 hide armor: 	AC 6 	-3 Dex 	24% DR	+3 casting time
-	 chain mail: 	AC 5 	-3 Dex 	24% DR	+3 casting time
-	 splint mail: 	AC 5 	-4 Dex 	30% DR	+4 casting time
-	 plate mail: 	AC 4 	-5 Dex 	36% DR	+5 casting time
-	 full plate:   AC 3 	-4 Dex	42% DR	+5 casting time<br />
-    Enchantment:
-	 +1:	 	-1 AC	+1 Dex	+1% DR
-	 +2: 		-2 AC 	+2 Dex	+2% DR
-	 +3:		-3 AC 	    "	+3% DR
-	 +4:		-4 AC 	    "	+4% DR
-	 +5:		-5 AC 	    "	+5% DR
-	 +6:		-6 AC 	    "	+6% DR<br />
+ Armor:
+    leather:	  AC 8 	-1 Dex 	8% DR 	+2 casting time  +0 weapon speed  0% miscast chance  0 movement penalty
+    studded:	  AC 7 	-2 Dex 	12% DR 	+2 casting time  +0 weapon speed  0% miscast chance  0 movement penalty
+    hide armor:   AC 6 	-3 Dex 	24% DR	+3 casting time  +0 weapon speed  0% miscast chance  0 movement penalty
+    chain mail:   AC 5 	-3 Dex 	24% DR	+3 casting time  +1 weapon speed  0% miscast chance  0 movement penalty
+    splint mail:  AC 5 	-4 Dex 	30% DR	+4 casting time  +2 weapon speed  0% miscast chance  0 movement penalty
+    plate mail:   AC 4 	-5 Dex 	36% DR	+5 casting time  +2 weapon speed  0% miscast chance  0 movement penalty
+    full plate:   AC 3 	-4 Dex	42% DR	+5 casting time  +2 weapon speed  0% miscast chance  0 movement penalty<br />
+ Enchantment:
+    +1:	 	-1 AC	+1 Dex	+1% DR
+    +2: 	-2 AC 	   " 	+2% DR
+    +3:		-3 AC 	   " 	+3% DR
+    +4:		-4 AC 	   " 	+4% DR
+    +5:		-5 AC 	   " 	+5% DR
+    +6:		-6 AC 	   " 	+6% DR<br />
   * "Caster" armors: no casting speed penalty
-  * Elven armors: dexterity penalty equal to leather armor
+  * Elven armors: dex/casting speed equal to leather
+  * Scale armors: like plate mail for AC, like chain for DR and penalties
       </pre>
-    <p><b>NOTE:</b> you can change many of these values by editing them in /Scales_of_Balance/ini/YARAS.ini.</p>
     <p>This component allows casting arcane spells in armor, but with steep casting time penalties. (As of now, these penalties do not affect divine casters.) It also makes changes to Dexterity bonuses: bonuses to AC and thieving skills are increased so that the penalty for wearing armor is more meaningful without being crippling, and the option to go without armor is a bit more reasonable.</p>
     <p>This also makes changes to Dexterity bonuses: bonuses to AC and thieving skills are increased so that the penalty for wearing armor is more meaningful without being crippling, and the option to go without armor is a bit more reasonable.</p>
     <p>Finally, this alters the Armor of Faith spell to only give a flat 10% DR bonus, at all levels; and reduces the DR bonus from Hardiness and Defensive Stance form 40% to 20%; and reduces the price of the Defender of Easthaven while reducing its DR bonus from 20% to 5%.</p>
+    <p><b>NOTE:</b> you can change these values by editing them in /Scales_of_Balance/ini/YARAS_default.ini. As of version 5.33, there is another version of these settings, which only applies thief skill penalties a chance of miscast magic... this is meant to mimic the "Allow Thieving in Heavy Armor" and "Allow Spellcasting in Armor" components of Tweaks Anthology, but is compatible with mods like Might & Guile and the 5E spellcasting conversion. To use those settings or your own personal preferences, copy /Scales_of_Balance/ini/YARAS_CD.ini or your modified version of /Scales_of_Balance/ini/YARAS_default.ini into your override folder and rename it to "d5_yaras.ini." If that file is in your override folder at the time of installation, the mod will use those settings instead of the default settings. You can keep a copy with your own preferred settings and use it each time you install mods.</p>
     <p><b>Compatibility:</b> this component covers the same ground as the IR component "Revised Armors" as well as the "Spellcasting in Armor" component.  Ditto for the Full Plate and Packing Steel mod, and some armor/casting-related components of Tweaks Anthology and Klatu Tweaks. Don't install these things together; choose one armor system mod and stick with it.</p>
   </div>
   <h4 class="subheader">Component 101: </h4>
@@ -119,7 +120,7 @@
       <li> Daggers do 1d5 base damage instead of 1d4. (This includes throwing daggers.)</li>
       <li> Light crossbows can be used 1-handed, with shields. Heavy crossbows have an overall +3 damage bonus to compensate.</li>
       <li> Bolts do 1d6 base damage (and thus, from heavy crossbows they do 1d6+3).</li>
-      <li> Longbows and composite bows have their base APR reduced to 3/2 but do an extra +2 damage.</li>
+      <li> Bows have their base APR reduced to 3/2; Longbows and composite bows do an extra +2 damage.</li>
       <li> Arrows do 1d5 damage (and thus, 1d5+2 from longbows).</li>
       <li> Sling bullets do blunt damage.</li>
       <li> Darts have 2 APR instead of 3.</li>
