--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -216,8 +216,8 @@
         &ndash; (++) = additional +1 thac0, +2 damage, and +5% crit chance<br /></p>
         <p>Two-Weapon Style: now called <b>"Dual-Wielding"</b><br />
         &ndash; ( ) = No off-hand attacks, no bonuses for dual-wielding<br />
-        &ndash; (+) = 0 to 2 point melee AC bonus; off-hand attack with 5-point thac0 penalty<br />
-        &ndash; (++) = off-hand attack has no thac0 penalty<br />.</p>
+        &ndash; (+) = 0 to 2 point melee AC bonus; off-hand attack with 6-point thac0 penalty compared to main hand<br />
+        &ndash; (++) = off-hand attack with same thac0 penalty as main hand (see below)<br />.</p>
       </div> 
       <p>When dual-wielding, your main-hand thac0 will depend on the size and weight of the weapons you have equipped, as described below.</p>
       <div class="kit_description">
