--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.33 </strong><br />
+  <p><strong> Version 5.34 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -161,12 +161,11 @@
       <p>This component can be considered a convenience tweak; it will give most classes natably more proficiency points to spend. But it incentivizes spreading those points more widely instead of focusing on a single weapon (like the vanilla game), and your overall level of power at any given moment should roughly on par with an unmodded game. The aim is, with more points in more weapons, when you complete a quest and find a wonderful magical artifact, you can actually *use* it instead of just tossing it into your pack to sell later.</p>
       <p>Weapon use is slightly liberalized: all weapons are usable by clerics, but single-class clerics can only be proficient in traditional cleric weapons (the exception being kitted clerics' favored weapons.) Multiclass clerics primarily benefit from this: cleric/thieves can use thief weapons, and fighter/clerics can use any weapon.</p>
       <p>Clubs are truly universal, simple weapons: everyone can use them. Crossbows are usable by everyone except druids and Beastmasters.</p>
-      <p>Warriors, rogues, and priests start with 5 proficiency points; wizards, sorcerers, and shamans start with 3. Warriors receive up the 3 more proficiencies, chosen by dialogue, if their INT score is 11 (+1), 12 (+2), or 13 (+3).</p> 
-      <p>At 1st level, you may only put one point in any weapon or style, so you must spread those proficiencies among many weapons. However, warriors may specialize at 1st level, and unusually intelligent trueclass fighters (INT score of 14+) receive a "focus training" ability allowing them to specialize in 1 more weapon. (<b>NOTE</b> - the focus weapon ability will only appear in EE games of version 1.4 or higher.) And trueclass fighters automatically get an additional weapon of focus, regardless of INT. </p>
+      <p>Warriors, rogues, and priests start with 5 proficiency points; wizards, sorcerers, and shamans start with 3. Warriors receive up the 3 more proficiencies, chosen by dialogue, if their INT score is 11 (+1), 12 (+2), or 13 (+3).  At 1st level, nonwarriors may only put one point in any weapon or style, so you must spread those proficiencies among many weapons. Warriors may specialize at 1st level. </p>
       <p>Warriors gain another proficiency point every 3 levels. Rogues gain a new point every 4 levels. Druids, clerics and shamans gain a new point every 5 levels. Wizards, sorcerers, and monks can never move past their initial proficiencies (<b>NOTE</b> - this means no more weapon advancement <b>at all</b> after dual-classing into a mage!).</p>
       <ul>
-        <li> Trueclass fighters and Kensai can attain Mastery (+++) at 6th level, and High Mastery (++++) at 9th level, in any weapons they focus on. </li>
-        <li> Other kitted fighters plus barbarians, paladins, and rangers can attain Mastery (+++) at 6th level. </li>
+        <li> Trueclass fighters and Kensai can attain Mastery (+++) at 6th level, and High Mastery (++++) at 9th level, in any weapons they focus on.</li>
+        <li> Other kitted fighters plus barbarians, paladins, rangers, and multiclass fighters can attain Mastery (+++) at 6th level.</li>
         <li> Rogues, clerics and druids, as well as mage/thieves, cleric/thieves and cleric/mages, can attain Specialization (++) after 6th level, with any weapons they can normally use.</li>
         <li> Multiclass fighter/mages can attain Mastery (+++) in any weapon but the only available styles are Single-Weapon and Two-Handed Weapon. </li>
         <li> Fighter/clerics and Fighter/thieves can attain Mastery (+++) in any weapon they can use.</li>
@@ -179,9 +178,195 @@
         &ndash; **** = +4 thac0; +4 damage; +1.5 APR<br />.</p>
       </div>
       <p>At 12th level, warriors will get a +1/2 APR bonus with all weapons. (This is in place of the unmodded game's 1/2 APR bonuses at 7th and 13th levels. Because you can get an extra APR bonus from proficiencies, the late-game total max APR for warriors will end up the same as in the unmodded game.)
-      <p>(The APR bonuses will only affect warriors, unless you also install the WPO part 5, "APR on Spec.")
-      <p>This component also tweaks the thac0 tables: Rogues' thac0 becomes equal to clerics and their progression is smoothed out - no more jumping by 2. Warriors start at thac0 20, and non-warriors start at thac0 21.</p>
-      <p>This component makes serious changes and it has been rather hard to get various game mechanisms to work with it, especially dual-classing and NPCs. To catch them up, joinable NPCs will have several innate abilities that allow you to choose more proficiencies for them.</p>
+      <p>(The APR bonuses will only benefit warriors, unless you also install the WPO part 5, "APR on Spec.")
+      <p>This component also tweaks the thac0 tables: Rogues' thac0 becomes equal to clerics and their progression is smoothed out - no more jumping by 2.</p>
+      <div class="kit_description">
+<table style= "width: 40%">
+ <tr>
+  <th> level </th>
+  <th> warriors </th>
+  <th> priests </th>
+  <th> rogues </th>
+  <th> wizards </th>
+ </tr>
+ <tr>
+  <td><b>1:</b></td>
+  <td>20</td>
+  <td>20</td>
+  <td>20</td>
+  <td>21</td>
+ </tr>
+ <tr>
+  <td><b>2:</b></td>
+  <td>19</td>
+  <td>19</td>
+  <td>19</td>
+  <td>20</td>
+ </tr>
+ <tr>
+  <td><b>3:</b></td>
+  <td>18</td>
+  <td>19</td>
+  <td>19</td>
+  <td>20</td>
+ </tr>
+ <tr>
+  <td><b>4:</b></td>
+  <td>17</td>
+  <td>18</td>
+  <td>18</td>
+  <td>19</td>
+ </tr>
+ <tr>
+  <td><b>5:</b></td>
+  <td>16</td>
+  <td>18</td>
+  <td>18</td>
+  <td>19</td>
+ </tr>
+ <tr>
+  <td><b>6:</b></td>
+  <td>16</td>
+  <td>17</td>
+  <td>17</td>
+  <td>18</td>
+ </tr>
+ <tr>
+  <td><b>7:</b></td>
+  <td>15</td>
+  <td>16</td>
+  <td>16</td>
+  <td>18</td>
+ </tr>
+ <tr>
+  <td><b>8:</b></td>
+  <td>14</td>
+  <td>16</td>
+  <td>16</td>
+  <td>17</td>
+ </tr>
+ <tr>
+  <td><b>9:</b></td>
+  <td>13</td>
+  <td>15</td>
+  <td>15</td>
+  <td>17</td>
+ </tr>
+ <tr>
+  <td><b>10:</b></td>
+  <td>12</td>
+  <td>15</td>
+  <td>15</td>
+  <td>16</td>
+ </tr>
+ <tr>
+  <td><b>11:</b></td>
+  <td>11</td>
+  <td>14</td>
+  <td>14</td>
+  <td>16</td>
+ </tr>
+ <tr>
+  <td><b>12:</b></td>
+  <td>11</td>
+  <td>13</td>
+  <td>13</td>
+  <td>15</td>
+ </tr>
+ <tr>
+  <td><b>13:</b></td>
+  <td>10</td>
+  <td>13</td>
+  <td>13</td>
+  <td>15</td>
+ </tr>
+ <tr>
+  <td><b>14:</b></td>
+  <td>9</td>
+  <td>12</td>
+  <td>12</td>
+  <td>14</td>
+ </tr>
+ <tr>
+  <td><b>15:</b></td>
+  <td>8</td>
+  <td>12</td>
+  <td>12</td>
+  <td>14</td>
+ </tr>
+ <tr>
+  <td><b>16:</b></td>
+  <td>7</td>
+  <td>11</td>
+  <td>11</td>
+  <td>13</td>
+ </tr>
+ <tr>
+  <td><b>17:</b></td>
+  <td>6</td>
+  <td>10</td>
+  <td>10</td>
+  <td>13</td>
+ </tr>
+ <tr>
+  <td><b>18:</b></td>
+  <td>6</td>
+  <td>10</td>
+  <td>10</td>
+  <td>12</td>
+ </tr>
+ <tr>
+  <td><b>19:</b></td>
+  <td>5</td>
+  <td>9</td>
+  <td>9</td>
+  <td>12</td>
+ </tr>
+ <tr>
+  <td><b>20:</b></td>
+  <td>4</td>
+  <td>9</td>
+  <td>9</td>
+  <td>11</td>
+ </tr>
+ <tr>
+  <td><b>21:</b></td>
+  <td>3</td>
+  <td>8</td>
+  <td>8</td>
+  <td>11</td>
+ </tr>
+ <tr>
+  <td><b>22:</b></td>
+  <td>2</td>
+  <td>7</td>
+  <td>7</td>
+  <td>11</td>
+ </tr>
+ <tr>
+  <td><b>23:</b></td>
+  <td>1</td>
+  <td>7</td>
+  <td>7</td>
+  <td>11</td>
+ </tr>
+ <tr>
+  <td><b>24:</b></td>
+  <td>1</td>
+  <td>6</td>
+  <td>6</td>
+  <td>11</td>
+ </tr>
+ <tr>
+  <td><b>25:</b></td>
+  <td>0</td>
+  <td>6</td>
+  <td>6</td>
+  <td>11</td>
+ </tr>
+</table>
+    </div>
+    <p>This component makes serious changes and it has been rather hard to get various game mechanisms to work with it, especially dual-classing and NPCs. To catch them up, joinable NPCs will have several innate abilities that allow you to choose more proficiencies for them.</p>
     <p><b>Compatibility:</b> this component is generally not compatible with stuff like the weapon proficiency changes in Tweaks Anthology. Choose one proficiency system mod and stick with it.</p>
   </div>
   <h4 class="subheader">Component 121: </h4>
