--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -1137,7 +1137,135 @@
   <td>+1</td>
  </tr>
 </table>
-  <p>NOTE: sorcerers only get bonuses to spells up to 5th level; in addition, they get up to three 1 bonuses to their caster level.</p>
+  <p>NOTE: sorcerers only get bonuses to spells up to 5th level. In addition, they get up to four +1 bonuses to their caster level.</p>
+<table style= "width: 50%">
+ <tr>
+  <th>STAT </th>
+  <th>1st level</th>
+  <th>2nd level</th>
+  <th>3rd level</th>
+  <th>4th level</th>
+  <th>5th level</th>
+  <th>Caster level</th>
+ </tr>
+ <tr>
+  <td><b>13:</b></td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>14:</b></td>
+  <td>+1</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>15:</b></td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>16:</b></td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>+1</td>
+ </tr>
+ <tr>
+  <td><b>17:</b></td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>+1</td>
+ </tr>
+ <tr>
+  <td><b>18:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>+1</td>
+ </tr>
+ <tr>
+  <td><b>19:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>+2</td>
+ </tr>
+ <tr>
+  <td><b>20:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>+2</td>
+ </tr>
+ <tr>
+  <td><b>21:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>+2</td>
+ </tr>
+ <tr>
+  <td><b>22:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>-</td>
+  <td>+3</td>
+ </tr>
+ <tr>
+  <td><b>23:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>+1</td>
+  <td>+3</td>
+ </tr>
+ <tr>
+  <td><b>24:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>+3</td>
+ </tr>
+ <tr>
+  <td><b>25:</b></td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+2</td>
+  <td>+1</td>
+  <td>+4</td>
+ </tr>
+</table>
   </div>
   <h4 class="subheader">Component 2012-13 (for EE 2.0+): </h4>
   <div class="section">
@@ -1257,6 +1385,10 @@
 </div>
 <h2>Version History</h2>
 <div class="section">
+  <p><strong>Version 5.37 - 2022</strong></p>
+  <ul>
+    <li>er, yeah, I have long since stopped updating this. It's mostly been bug fixes and compatibility updates. Looking back at this is a blast, though. The "Moon Knight?" "Silkwhisper?" I don't even remember what those things are!</li>
+  </ul>
   <p><strong>Version 5.22-5.23 - 2020</strong></p>
   <ul>
     <li>some fixes</li>
