--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -57,7 +57,7 @@
     <li> [tweak mods including Tweaks Anthology]</li>
     <li> SCS</li>
     <li> Scales of Balance (v6+)</li>
-    <li> [end-of-order mods like LevelOneNPCs, NPC_EE, Randomiser, etc.]</li>
+    <li> [end-of-order mods like LevelOneNPCs, NPC_EE, Dual to Kit, etc.]</li>
   </ul>
   <p><strong>Modder Resources:</strong><br />
 	Scales of Balance adds several custom spellstates to SPLSTATE.IDS.  It uses the 4th byte of stat 115, Clubs proficiency, for certain features, principally the Revised Weapon Styles component. </p>
